--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"sass": "^1.79.6",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"svelte-preprocess": "^6.0.3",
 		"tailwindcss": "^3.4.14",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
@@ -38,6 +39,5 @@
 		"vitest": "^2.0.4"
 	},
 	"dependencies": {
-		"svelte-preprocess": "^6.0.3"
 	}
 }
